fix:mainWrapDesign

--- a/src/app/frontend/assets/_scss/_common/_base.scss
+++ b/src/app/frontend/assets/_scss/_common/_base.scss
@@ -339,6 +339,9 @@ th {
   }
 }
 @include g.mxMediaQuery(g.$bp-sm) {
+  .l-main {
+    padding-top: 80px;
+  }
   .l-inner {
     padding: 0 4.6vw;
   }
